testsuite/bsc.typechecker/bound-type-vars/BVD.bs
package BVD where

k :: Bool -> Bit n
k x = pack x
